sass/_components.scss
/* ... */
//MESSAGE POPUP
.message {
  &-icon {
    position: relative;
  }

  &-popup {
    background-color: #fff;
    position: absolute;
    top: 100%;
    right: -80%;
    padding: 3rem;
    width: 30vw;
    box-shadow: var(--shadow-dark);
    border-radius: 5px;
    z-index: 50;
    visibility: hidden;

    &__title {
      color: var(--color-grey-dark-1);
      font-size: 2.5rem;
      margin-bottom: 1.5rem;
    }
    &__list {
      display: flex;
      align-items: center;

      border-bottom: var(--line);
      padding: 1rem 0;
    }

    &__photo {
      height: 5rem;
      border-radius: 50%;
      margin-right: 1.5rem;

      flex: 0 0 10%;
    }

    &__text {
      flex: 1;
      font-size: 1.3rem;
    }

    &__name {
      font-size: 1.8rem;
      font-weight: 700;
    }
  }
}

.messsge-icon:hover .message-popup {
  visibility: visible;
}

//USER POPUP
.user-popup {
  position: absolute;
  top: 100%;
  right: 0;
  width: 100%;
  padding: 2.5rem;
  background-color: var(--color-grey-light-2);
  visibility: hidden;

  &__list {
    font-size: 1.5rem;
    list-style: none;
    transition: color 0.2s, transform 0.2s;

    &:not(:last-child) {
      margin-bottom: 1rem;
    }

    &:hover {
      color: var(--color-primary);
      transform: scale(1.1);
    }
  }
}

/////////////////////
//SIDE NAVIGATION
.side-nav {
  font-size: 1.4rem;
  list-style: none;
  margin-top: 3.5rem;

  @media only screen and (max-width: $bp-medium) {
    display: flex;
    margin: 0;
  }

  &__item {
    position: relative;

    &:not(:last-child) {
      margin-bottom: 0.5rem;

      @media only screen and (max-width: $bp-medium) {
        margin-bottom: 0;
      }
    }

    @media only screen and (max-width: $bp-medium) {
      flex: 1;
    }
  }

  //for the red color animation when hover//

  &__item::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 3px;
    background-color: var(--color-primary);
    transform: scaleY(0);
    transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
      background-color 0.1s;
  }

  &__item:hover::before,
  &__item--active::before {
    transform: scaleY(1);
    width: 100%;
  }

  &__item:active::before {
    background-color: var(--color-primary-light);
  }

  &__link,
  &__link:visited {
    color: var(--color-grey-light-1);
    text-decoration: none;
    text-transform: uppercase;
    display: block;
    padding: 1.5rem 3rem;
    position: relative;
    z-index: 10;

    //align icon and span //
    display: flex;
    align-items: center;

    @media only screen and (max-width: $bp-medium) {
      justify-content: center;
      padding: 2rem;
    }

    @media only screen and (max-width: $bp-small) {
      flex-direction: column;
      padding: 1.5rem 0.5rem;
    }
  }

  &__icon {
    height: 1.75rem;
    width: 1.75rem;
    margin-right: 2rem;
    fill: currentColor;

    @media only screen and (max-width: $bp-small) {
      margin-right: 0;
      margin-bottom: 0.7rem;
      height: 1.5rem;
      width: 1.5rem;
    }
  }
}

/////////////////////
//LEGAL TEXT
.legal {
  color: var(--color-grey-light-4);
  font-size: 1.4rem;
  text-align: center;
  padding: 2.5rem;

  @media only screen and (max-width: $bp-medium) {
    display: none;
  }
}

/////////////////////
//GALLERY
.gallery {
  display: flex;

  &__item {
    position: relative;
  }

  &__photo {
    width: 100%;
    display: block;
  }

  &__item:hover &__caption {
    color: var(--color-primary-dark-2);
  }

  &__caption {
    font-size: 2.5rem;
    font-weight: 700;
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: transparent;
    width: 70%;
  }
}

/////////////////////
//OVERVIEW
.overview {
  display: flex;
  align-items: center;
  border-bottom: var(--line);

  &__heading {
    font-size: 2.25rem;
    font-weight: 300;
    text-transform: uppercase;
    letter-spacing: 1px;
    padding: 1.5rem 3rem;

    @media only screen and (max-width: $bp-small) {
      font-size: 1.8rem;
      padding: 1.25rem 2rem;
    }
  }

  &__stars {
    //get space all the margin space right
    margin-right: auto;
    //cancel the space of svg and make same hight with parent element
    display: flex;
  }

  &__icon-star,
  &__icon-location {
    width: 1.75rem;
    height: 1.75rem;
    fill: var(--color-primary);
  }

  &__location {
    font-size: 1.2rem;

    //align icon and text//
    display: flex;
    align-items: center;
  }

  &__icon-location {
    margin-right: 0.5rem;
  }

  &__rating {
    background-color: var(--color-primary);
    color: #fff;
    margin-left: 3rem;
    padding: 0 2.25rem;
    //stretch the hight top to bottom for the background color (only this element)//
    align-self: stretch;

    //make the text in the middle of the element//
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    @media only screen and (max-width: $bp-small) {
      padding: 0 1.5rem;
    }
  }

  &__rating-average {
    font-size: 2.5rem;
    font-weight: 300;
    margin-bottom: -3px;

    @media only screen and (max-width: $bp-small) {
      font-size: 1.8rem;
    }
  }

  &__rating-count {
    font-size: 0.8rem;
    text-transform: uppercase;

    @media only screen and (max-width: $bp-small) {
      font-size: 0.5rem;
    }
  }
}

/////////////////////
//BUTTON INLINE
.btn-inline {
  border: none;
  color: var(--color-primary);
  font-size: inherit;
  border-bottom: 1px solid currentColor; //currentColor= --color-primary
  padding: 2px;
  display: inline-block;
  background-color: transparent;
  cursor: pointer;
  transition: all 0.2s;

  & span {
    margin-left: 0.3rem;
    transition: margin-left 0.2s;
  }

  &:hover {
    color: var(--color-grey-dark-1);

    span {
      margin-left: 0.8rem;
    }
  }

  &:focus {
    outline: none;
    animation: pulsate 1s infinite;
  }
}
/* ... */

